@@ -1,3 +1,7 @@
+2007-04-02  Dmitry Galinsky  <dima.exe@gmail.com>
+
+	* rails-lib.el (merge-abbrev-tables): mark abbrev as system 
+
 2007-04-01  Dmitry Galinsky  <dima.exe@gmail.com>
 
 	* rails-snippets.el: updated snippets
